tests/ui/closures/binder/forbid_const_infer.stderr
error: implicit types in closure signatures are forbidden when `for<...>` is present
  --> $DIR/forbid_const_infer.rs:4:35
   |
LL |     let c = for<'a> |b: &'a [u32; _]| -> u32 { b[0] };
   |             -------               ^
   |             |
   |             `for<...>` is here

error: aborting due to 1 previous error

